# b4video

./: .env.example  .gitignore  README.md  pyproject.toml
b4video/: __init__.py  assemble.py  cli.py  compose.py  config.py  manifest.py  parser.py  pipeline.py  templates.py  visuals.py  voice.py  whiteboard.py
diagrams/: agent-coordination.yaml
examples/: beads-demo.md  test-minimal.md  what-is-b4arena.md  whiteboard-test.md
tests/: test_manifest.py  test_parser.py
